--- a/netty/pom.xml
+++ b/netty/pom.xml
@@ -7,6 +7,22 @@
     <groupId>org.example</groupId>
     <artifactId>netty</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+<!--        <dependency>-->
+<!--            <groupId>io.netty</groupId>-->
+<!--            <artifactId>netty-all</artifactId>-->
+<!--            <version>4.1.53.Final</version>-->
+<!--        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>5.0.0.Alpha1</version>
+        </dependency>
+
+    </dependencies>
     <build>
         <plugins>
             <plugin>
